updated position of user feedback, responsive

--- a/style.css
+++ b/style.css
@@ -121,8 +121,6 @@ h3 {
 /* user feedback */
 #user-feedback-frame {
   position: fixed;
-  left: 35%;
-  top: 20%;
   display: block;
   align-content: center;
   align-items: center;
@@ -169,13 +167,25 @@ h3 {
     h3 {
     font-size: 4vw;
     width: auto; 
-  }
+  } 
+    #user-feedback-frame {
+      left: 25%;
+      top: 25%;
+    }
+
 }
 
 @media screen and (min-width: 601px) {
     h3 {
       font-size: 1.3rem;
     }
+    #user-feedback-frame {
+      left: 45%;
+      top: 35%;
+    }
+
 }
+
+
 
 
