--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ h3 {
 }
 
 /* Overlay and Game Start Button */
-#overlay {
+.overlay {
   position: fixed;
   display: block;
   width: 100%;
@@ -160,6 +160,27 @@ h3 {
 .user-feedback-text {
   padding-top: 10px;
   padding-bottom: 10px;
+}
+
+#congratulations {
+  visibility: hidden;
+  color: #2B7A0B;
+  text-align: center;
+  font-family: 'Fredoka One', cursive;
+  font-weight: 100;
+  position: relative;
+  align-self: center;
+  top: 30%;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
+  
+  background-color: #EAE509;
+  border-radius: 10px;
+  width: 300px;
+  height: 50px;
+  box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.35);
+  pointer-events: none;
 }
 
 /* Responsive website text management */
